docs/_sass/_style.scss
/* ... */
/* Remove top menubar to the side */
/* Move to-top icon to lower right corner */    
/* Make article take up 2/3, and sidebar 1/3 */
@media only screen and (min-width: 700px){

    #wrapper{
        top:0;
    }

    article{
        .content{
            padding:10px 20px;
        }
    }

    .content-wrapper{   
        float: left;
        padding: 5px 5px 0 5px;
        
        &.left{
            width: 2/3 * 100%;
        }
        &.right{
            width: 1/3 * 100%;
        }
    }

    .menubar{
        display: static;
        position: relative;
        .menu{
            display: none;
        }
        .top{
            position: fixed;
            bottom: 15px;
            right: 15px;
            border-radius: 50%;
            background: $dark-teal;
            @include box-shadow( 1px 1px 4px 0 $light-blue);
        }
    }

    .grid{
        max-width: 825px + 300px;
        margin: 0 auto;
    }

    .improve{
        display: block !important;
        float: right;
        a{
            display: inline-block;
            height: 100%;
            padding: 0.1em 0.3em 0 0.2em;
            border-radius: .5em;
            background: desaturate(darken($light-blue,5%), 20%);
            @include box-shadow(0 1px 4px 0 desaturate(darken($main-blue,8%), 50%) inset);
            margin: 5px 0 0 0;
            .icon-pencil{
                padding-top: 4px;
                max-height: 2em;
                max-width: 2em;
            }
            .icon-pencil+span{
                display: inline-block;
                max-width: 0;
                overflow: hidden;
                white-space: nowrap;
                @include transition(max-width .5s ease-out);
            }
            &:hover .icon-pencil+span{
                max-width: 200px;
                @include transition(max-width .5s ease-out);
            }
        }
        @at-root .icon-pencil:before{
            display: inline-block;
            text-align: right; 
            content: "\270E";
            font-size: 1.6em;
        }
    }

    .sidebar{
        z-index: initial;

        .category-wrapper{
            background: initial;
            display: block !important;
            position: static;
        }
        #menu-toggle{
            display: none;
        }
        .title-banner{
            display: block;
        }
        .title-banner-content{
            display: block;
            padding: 0 10px;
            .category:first-of-type>div{
                @include box-shadow(0 7px 4px -6px black inset);
            }
        }

        .categories{
            display: block;
            position: static;
            .links{
                &:first-child{
                    @include box-shadow(none);
                    a{
                        margin: initial;
                    }
                }
                a{
                    display: block;
                    &:first-child li{
                        border-top: none;
                        &:after{
                            content: "";
                            position: absolute;
                            top:0;
                            left:-5px;
                            width: 105%;
                            height: 100%;
                            @include box-shadow(0 7px 4px -6px black inset);
                        }
                    }
                    &:last-child li{
                        border-bottom: none;
                        @include box-shadow(0 -6px 4px -6px black inset);
                    }
                }
            }

            .current{
                position: relative;
                &:before{
                    bottom:50%;                    
                    border-top: 1em solid transparent;
                    border-right: 15px solid $selected-color;
                }
                &:after{
                    top:50%;
                    border-bottom: 1em solid transparent;
                    border-right: 15px solid $selected-color;
                }
                &:after, &:before{
                    content:'';
                    position: absolute;
                    left:-15px;
                    width:0;
                    height:0;
                }
                &:hover{
                    &:after, &:before{
                        border-right-color: darken($color: $selected-color, $amount: 7%);
                    }
                }
            }
        }
    }

}

@media only screen and (min-width: 1000px){

    .content-wrapper{        
        &.left{
            width: 3/4 * 100%;
        }
        &.right{
            width: 1/4 * 100%;
        }
    }

    article{
        .content{
            padding:10px 30px;
            font-size: 1.1em;
        }
    }
}

